--- a/index.html
+++ b/index.html
@@ -13,17 +13,27 @@
     <title>Web Developer Portfolio</title>
   </head>
   <body class="open-sans-normal">
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
           <li><a class="dark-2" href="">Portfolio</a></li>
           <li><a class="dark-2" href="">Blog</a></li>
           <li>
-            <a href=""><button>Hire Me</button></a>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
           </li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h3 class="banner-greetings dark-2">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-description dark-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda, nihil. Ea quaerat cupiditate, sunt molestias facere unde alias quas nobis ducimus accusamus numquam consequuntur maiores ex culpa nesciunt! Numquam voluptate voluptatum ab ut, at odit tenetur debitis expedita molestiae quibusdam saepe molestias, aut odio quia repellendus! Similique consequatur eius placeat.</p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-secondary">Contact</button>
+        </div>
+        <img class="banner-profile-pic" src="./images/hardy.png" alt="">
+      </div>
     </header>
     <main></main>
     <footer></footer>
